--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/phyu.nwe.731?mibextid=JRoKGi">Daw Phyu Nwe</a></strong>
-                                        <small class="text-muted d-block">Senior Developer</small>
+                                        <small class="text-muted d-block">Chief of Health</small>
                                     </div>
                                 </div>
 
@@ -387,8 +387,8 @@
                                         <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
-                                        <strong>Kyaw Kyaw</strong>
-                                        <small class="text-muted d-block">Senior Developer</small>
+                                        <strong><a href=" https://www.facebook.com/profile.php?id=100009558290538&mibextid=JRoKGi ">Ko Zaw Myo Thet</a></strong>
+                                        <small class="text-muted d-block">Assistant Teacher</small>
                                     </div>
                                 </div>
 
@@ -408,8 +408,8 @@
                                         <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
-                                        <strong>Kyaw Kyaw</strong>
-                                        <small class="text-muted d-block">Senior Developer</small>
+                                        <strong><a href=" https://www.facebook.com/new.phyulay.1?mibextid=JRoKGi ">Dr Phyu Phyu Khin</a></strong>
+                                        <small class="text-muted d-block">M B B S</small>
                                     </div>
                                 </div>
 
