--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
                                         <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
-                                        <strong><a href=" https://www.facebook.com/new.phyulay.1?mibextid=JRoKGi ">Dr Phyu Phyu Khin</a></strong>
-                                        <small class="text-muted d-block">M B B S</small>
+                                        <strong><a href=" https://www.facebook.com/new.phyulay.1?mibextid=JRoKGi ">Ma Phyu Phyu Khin</a></strong>
+                                        <small class="text-muted d-block">Chief of Health</small>
                                     </div>
                                 </div>
 
