--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             <div class="carousel-item px-4 pt-4 pb-5 bg-light text-dark active">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="me-3">
-                                        <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
+                                        <img src="pn.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/phyu.nwe.731?mibextid=JRoKGi">Daw Phyu Nwe</a></strong>
@@ -384,7 +384,7 @@
                             <div class="carousel-item px-4 pt-4 pb-5 bg-light text-dark text-dark ">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="me-3">
-                                        <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
+                                        <img src="zmt.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/profile.php?id=100009558290538&mibextid=JRoKGi ">Ko Zaw Myo Thet</a></strong>
@@ -405,7 +405,7 @@
                             <div class="carousel-item px-4 pt-4 pb-5 bg-light text-dark ">
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="me-3">
-                                        <img src="profile.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
+                                        <img src="ppk.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/new.phyulay.1?mibextid=JRoKGi ">Ma Phyu Phyu Khin</a></strong>
