--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis nesciunt natus facere, aliquam dicta officiis omnis? Laboriosam maiores consequatur vel quos placeat ab, adipisci aliquid porro odio soluta ullam voluptatem.</p>
+                                    <img src="zmt.jpg" style="height:200px; width:200px;">
                                 </div>
                                 <div class="">
                                     <i class="fa-solid fa-star text-danger"></i>
