--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
-                                    <img src="zmt.jpg" style="height:200px; width:200px;">
+                                <div class="row justify-content-center">
+                                    <img src="zmt.jpg" style="height:350px; width:350px;">
                                 </div>
                                 <div class="">
                                     <i class="fa-solid fa-star text-danger"></i>
