--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis nesciunt natus facere, aliquam dicta officiis omnis? Laboriosam maiores consequatur vel quos placeat ab, adipisci aliquid porro odio soluta ullam voluptatem.</p>
+                                <div class="row justify-content-center">
+                                    <img src="pn.jpg" style="height:350px; width:350px;">
                                 </div>
                                 <div class="">
                                     <i class="fa-solid fa-star text-danger"></i>
@@ -413,8 +413,8 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis nesciunt natus facere, aliquam dicta officiis omnis? Laboriosam maiores consequatur vel quos placeat ab, adipisci aliquid porro odio soluta ullam voluptatem.</p>
+                                <div class="row justify-content-center">
+                                    <img src="ppk.jpg" style="height:350px; width:350px;">
                                 </div>
                                 <div class="">
                                     <i class="fa-solid fa-star text-danger"></i>
