--- a/index.html
+++ b/index.html
@@ -407,6 +407,22 @@
                                 </div>
                                 
                             </div>
+                            <div class="carousel-item px-4 pt-4 pb-5 bg-light text-dark ">
+                                <div class="d-flex align-items-center mb-3">
+                                    <div class="me-3">
+                                        <img src="as.jpg" style="width: 60px; height: 60px;" class="rounded-circle">
+                                    </div>
+                                    <div class="">
+                                        <strong><a href=" https://www.facebook.com/sannnaing.aye?mibextid=JRoKGi ">Dr Sann Naing Aye</a></strong>
+                                        <small class="text-muted d-block">MD at Kyauk Phyu Hospital</small>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <img src="asc.jpg" style="height:350px; width:350px;">
+                                </div>
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
