--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
                         </div>
                         <div class="carousel-inner shadow-sm bg-light">
                             <div class="carousel-item px-4 pt-4 pb-5 bg-light text-dark active">
@@ -485,7 +486,8 @@
                             </div>
                             <input type="text" class="form-control border-0 mb-3" placeholder="Subject">
                             <textarea cols="30" rows="10" class="form-control border-0 mb-3" placeholder="Your Message"></textarea>
-                            <button class="btn btn-danger text-white px-3 animate__animated" id="sendBtn">Send Message</button>
+                            <a href="https://www.facebook.com/profile.php?id=100086301012742&mibextid=JRoKGi"> <button class="btn btn-danger text-white px-3 animate__animated" id="sendBtn">Send Message</button> </a>
+                            
                             <!-- </form> -->
                         </div>
                     </div>
