--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <section class="bg-dark txt-white text-white mt-4">
         <div class="container-lg p-3 d-flex justify-content-center align-items-center">
             <div class="col-md-8 text-center">
-                <small class="text-capitalize">we learn, we share, we code | this laboratory is for all coders</small>
+                <small class="text-capitalize">we learn, we share, we care | this organization is for all learners</small>
             </div>
         </div>
     </section>
