--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="text-muted mt-3 txt-white">
                         သူနာပြုဘာသာရပ်ကို အမှန်တကယ် ဝါသနာပါသူများ၊ဆေးဆိုင်ဖွင့်လိုသူများ၊ မိဘဆွေမျိုးများ နှင့် ချစ်ခင်ရသူများကို ဂရုစိုက်ပေး ချင်သူများ၊ ပြည်တွင်း၊ပြည်ပ တွင် သူနာပြုအကူ တစ်ယောက်အဖြစ် အသက်မွေးဝမ်းကြောင်းပြု ချင်သူများ၊ မိမိ နှင့် မိမိပတ်ဝန်းကျင် ကျန်းမာစွာ နေထိုင်လိုသူများအတွက် မဖြစ်မနေ တတ်ရောက်သင့်တဲ့ သင်တန်းလေးမို့ တွေဝေစောင့်ဆိုင်းမနေပါနဲ့တော့နော်။ ကျွမ်းကျင် သော ဆရာ/ဆရာမ များနှင့် စနစ်ကျနသော သင်ရိုးညွှန်းတမ်း အား သင်ကြားခွင့်ရမည့် အခွင့်အရေး၊ သင်တန်းပြီး ဆုံးပါက သင်တန်းဆင်းလက်မှတ် ပေးအပ်ပွဲ ဖြင့် Certificate နှင့် ဆုပေးပွဲပြုလုပ်ပြီး ဆုများချီးမြှင့်သွားမည့်အခွင့်အရေး၊ အလုပ်အကိုင်အတွက် ပြည်တွင်း ဆေးရုံ/ဆေးခန်းများ၊ဆေးဆိုင်များတွင် အလုပ်မရမချင်း နှင့် ပြည်ပအလုပ်အကိုင် များ အတွက် အလုပ်အကိုင် ရှာဖွေ ပေးသွားမည့် အခွင့်အရေးများ ရရှိနိုင်သောကြောင့် PHYU SIN PYAE SONE ကိုလာခဲ့ဖို့ဖိတ်ခေါ်ပါတယ်။
                     </p>
-                    <button class="btn btn-danger text-white mt-1 px-4 animate__animated" id="myBtn">My Work</button>
+                    <a href=" ./content.html " target_blank><button class="btn btn-danger text-white mt-1 px-4 animate__animated" id="myBtn">Our Lecture Contents</button>  </a>
                 </div>
             </div>
         </div>
