--- a/content.html
+++ b/content.html
@@ -337,13 +337,34 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
                             <h4 class="fw-bold fs-5">သူနာပြုအကူသင်တန်း</h4>
                         </div>-->
                         <div>
-                            <p class="text-muted ">  </p>
+                            <p class="text-muted "> ဖြူစင်ပြည့်စုံ သင်တန်းကျောင်းလေးမှာပါရှင်
+          သူနာပြုအကူများအတွက် သူနာပြုစုရာတွင် 
+          လိုအပ်သော အရေးကြီးသော Procedure 
+          များအား လက်တွေ့ပြသ လေ့ကျင့်ပေးနေခြင်း
+          ဖြစ်ပါတယ်ရှင် 
+
+ယခုကတော့ ပါးစပ်ဖြင့်အစာမစားနိုင်သောလူနာ
+         များအား နှာခေါင်းပိုက်မှ တဆင့် အစာကျွေးခြင်
+         ကို ချယ်ကြီး ကိုယ်တိုင် လေ့ကျင့်သင်ကြားပေး
+         နေခြင်းဖြစ်ပါတယ်ရှင် 
+
+ဒီလို သင်ကြားပေးထားလို့လဲ ကျမတို့သင်တန်း
+         ကျောင်းက ကလေးတွေဟာ အရည်အချင်းရှိရှိ 
+        အောင်မြင်သွားကြတာ ဖြစ်ပါတယ်ရှင့် 
+
+ဒါကြောင့်မို့ ခုလို အရည်အချင်းရှိတဲ့
+          သင်တန်းသားလေး ဖြစ်ချင်ရင် ကိုယ့်သားသမီး
+          လေးတွေ ခုလို အရည်းအချင်းရှိတဲ့ သူလေးတွေ 
+          ဖြစ်စေချင်ရင် ချယ်ကြီးတို့သင်တန်း ကျောင်း
+          လေးကို သတိရလိုက်ပါရှင်
+
+                                                                 </p>
                         </div>
                         <div class="mb-3">
-                            <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="psps.jpg" alt="">
+                            <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c21.jpg" alt="">
                         </div>
                   
-                        <a href="psps.jpg" target="_blank" class="text-danger text-decoration-none fw-bold">Demo</a>
+                        <a href="c21.jpg" target="_blank" class="text-danger text-decoration-none fw-bold">Demo</a>
                     </div>
                 </div>
               
