--- a/content.html
+++ b/content.html
@@ -94,9 +94,7 @@
         ခုလို ဗဟုသုတကြွယ်ဝပြီး 
          စနစ်တကျ သေချာသင်ပြပေးမဲ့ ဆရာကောင်း
          တွေနဲ့ သင်ကြားချင်ရင်ဖြင့် ချယ်တို့ရဲ့ သင်တန်း
-         ကျောင်းလေးကို ဆက်သွယ်လ်ုက်တော့နော်
-
-                                                         </p>
+         ကျောင်းလေးကို ဆက်သွယ်လ်ုက်တော့နော် </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c7.jpg" alt="">
@@ -120,9 +118,7 @@
           ကင်ဆာ ရောဂါ အကြောင်းနဲ့ 
           ကင်ဆာရောဂါကုသတဲ့ ဆေးတွေ အကြောင်း 
           သိကောင်းစရာ တွေကို သင်ကြားပေး
-          နေတာ ဖြစ်ပါတယ်ရှင်
-
-                                                   </p>
+          နေတာ ဖြစ်ပါတယ်ရှင်</p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c9.jpg" alt="">
@@ -166,9 +162,7 @@
          ကို ဆက်သွယ်လိုက်ပါရှင့်
 
 pH no 09968113640 သို့ Hello လိုက်ပါရှင့် 
-         အမြဲ ကြိုဆိုလျှက်ပါရှင့် 
-
-                                                            </p>
+         အမြဲ ကြိုဆိုလျှက်ပါရှင့်  </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c11.jpg" alt="">
@@ -208,9 +202,7 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
 
 သင်တန်းတက်မည်ဆိုပါက 
           pH no 09968113640 သို့ ခုပဲ Hello 
-          လိုက်ပါရှင့်
-
-                                                        </p>
+          လိုက်ပါရှင့် </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c13.jpg" alt="">
@@ -246,9 +238,7 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
          လွယ်တာ ဖြစ်ပါတယ်ရှင်~~~
 
 ဒီလို သင်တန်းကျောင်းလေး တက်ချင်ရင်တော့ 
-          09968113640 ကို Hello လိုက်ပါရှင် ~~~
-
-                                                                </p>
+          09968113640 ကို Hello လိုက်ပါရှင် </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c15.jpg" alt="">
@@ -271,9 +261,7 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
            ဆရာကြီးက သူနာပြုအကူ သင်တန်းသား
            တွေကို Common Drugs Use 
            အသုံးများ တဲ့ ဆေးဝါးတွေအကြောင်း 
-           သင်ကြားပေးနေတာ ဖြစ်ပါတယ်ရှင် 
-
-                                                     </p>
+           သင်ကြားပေးနေတာ ဖြစ်ပါတယ်ရှင် </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c17.jpg" alt="">
@@ -316,9 +304,7 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
           ဖြူစင်ပြည့်စုံ သင်တန်းကျောင်းလေးကို လှမ်းခဲ့ 
           ပါရှင့်
 
- Hello Ph 09968113640 ပါရှင့်
-
-                                                                     </p>
+ Hello Ph 09968113640 ပါရှင့်  </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c19.jpg" alt="">
@@ -356,9 +342,7 @@ pH no 09968113640 သို့ Hello လိုက်ပါရှင့်
           သင်တန်းသားလေး ဖြစ်ချင်ရင် ကိုယ့်သားသမီး
           လေးတွေ ခုလို အရည်းအချင်းရှိတဲ့ သူလေးတွေ 
           ဖြစ်စေချင်ရင် ချယ်ကြီးတို့သင်တန်း ကျောင်း
-          လေးကို သတိရလိုက်ပါရှင်
-
-                                                                 </p>
+          လေးကို သတိရလိုက်ပါရှင် </p>
                         </div>
                         <div class="mb-3">
                             <img style="width: 100%; height: 320px;" class="img-thumbnail object-fit-cover" src="c21.jpg" alt="">
