--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/phyu.nwe.731?mibextid=JRoKGi">Daw Phyu Nwe</a></strong>
-                                        <small class="text-muted d-block">Chief of Health</small>
+                                        <small class="text-muted d-block"> Township Nurse at Hlaingtharyar Township Health Department </small>
                                     </div>
                                 </div>
 
@@ -399,7 +399,7 @@
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/new.phyulay.1?mibextid=JRoKGi ">Ma Phyu Phyu Khin</a></strong>
-                                        <small class="text-muted d-block">Chief of Health</small>
+                                        <small class="text-muted d-block">Assistant Teacher</small>
                                     </div>
                                 </div>
 
@@ -415,7 +415,7 @@
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/sannnaing.aye?mibextid=JRoKGi ">Dr Sann Naing Aye</a></strong>
-                                        <small class="text-muted d-block">MD at Kyauk Phyu Hospital</small>
+                                        <small class="text-muted d-block">TB Specialist at Aung Sann TB specialist Hospital</small>
                                     </div>
                                 </div>
 
