--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                     </div>
                                     <div class="">
                                         <strong><a href=" https://www.facebook.com/sannnaing.aye?mibextid=JRoKGi ">Dr Sann Naing Aye</a></strong>
-                                        <small class="text-muted d-block">TB Specialist at Aung Sann TB specialist Hospital</small>
+                                        <small class="text-muted d-block">TB Specialist at Aung Sann TB Specialist Hospital</small>
                                     </div>
                                 </div>
 
