--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
                         <h3 class="fw-bold fs-4 txt-white"><i>Course Fees</i></h3>
                     </div>
                     <div class="mb-5">
-                        <p class=" txt-white fw-bold">သူနာပြုအကူသင်တန်း - 350,000 Ks</p>
-                      <p class=" txt-white fw-bold">ဆေးဝါးကျွမ်းကင်သင်တန်း - 250,000 Ks</p>
+                        <p class=" txt-white fw-bold">သူနာပြုအကူသင်တန်း [4 M (4 D A Week)] - 350,000 Ks</p>
+                      <p class=" txt-white fw-bold">ဆေးဝါးကျွမ်းကင်သင်တန်း [4 M (4 D A Week)] - 250,000 Ks</p>
+                        <p class=" txt-white fw-bold">Special NA Class [6 M (Sun Only)] - 400,000 Ks</p>
+                        <p class=" txt-white fw-bold">Special PA Class[5 M (Sat Only)] - 300,000 Ks</p>
                     </div>
                     <div class="d-flex justify-content-evenly text-center text-uppercase mb-5">
                         <div>
